<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="server_to_download_image">http://testserver7.url.ph/</string>
    
    <string name="app_name">Phonebook</string>
    <string name="hello_world">Hello world!</string>
    <string name="add">Добавить</string>
    <string name="delete">Удалить</string>
    <string name="settings">Настройки</string>
    <string name="import_export">Импорт/экспорт</string>
    <string name="cancel">Отмена</string>
    <string name="title_activity_add_contact">Добавить контакт</string>
    <string name="title_activity_edit_contact">Редактировать контакт</string>
    <string name="title_settings">Настройки</string>
    <string name="action_settings">Settings</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="gender">Пол</string>
    <string name="address">Адрес</string>
    <string name="loadFromSD">Выбрать из галереи</string>
    <string name="getPhoto">Сделать снимок</string>
    <string name="loadFromNet">Загрузить с сети</string>
    
    <string name="warning_fill">Заполните имя и фамилию!</string>
    <string name="warning_internet">Проверьте соединение с интернетом!</string>
    
    <string name="edit">Редактировать</string>
    <string name="back">Назад</string>
    
    <string name="action_import">Импорт</string>
    <string name="action_export">Экспорт</string>
    
    <string name="changeGender">Показывать только муж/жен</string>
    <string name="selectColorForMan">Выбрать цвет для мужчин</string>
    <string name="selectColorForWoman">Выбрать цвет для женщин</string>

    <string-array name="gender_array">
        <item>Муж.</item>
        <item>Жен.</item>
    </string-array>
    
    <string-array name="gender_select_array">
        <item>Муж.</item>
        <item>Жен.</item>
        <item>Всех</item>
    </string-array>
    
   <string-array name="color_array">
        <item>Черный</item>
        <item>Красный</item>
        <item>Синий</item>
        <item>Зеленый</item>
    </string-array>
   
    
    <string-array name="color_array_values">
        <item>#000000</item>
        <item>#F0371E</item>
        <item>#369DE1</item>
        <item>#177245</item>
    </string-array>
    
    <string name="man">Мужской</string>
    <string name="woman">Женский</string>

    <string name="title_activity_view_contact">ViewContact</string>

</resources>
